--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "flag-icon-css": "^3.5.0",
     "next": "^11.0.1",
     "next-auth": "^3.27.3",
     "react": "^17.0.2",
